delete lead in show page
Former-commit-id: d605aefa3d85e3ea2028cd9b1800a2e42e06b1dc [formerly 2e5de7430fcd5e0b1cb963bca225dc18ecf8c1e4] [formerly 8f3ae403316f82c1b7cd6805839424626d75113b [formerly 72bb3e493ef4c7d6766b2fcddae854aef7fcd353]]
Former-commit-id: ce79422e0d853fa78e5b94e77dfc82bf4071610e [formerly 68ed2798f42cf394325720d780885368c20537bf]
Former-commit-id: 6e8c4cdd305c8218f553d29b2bc7d461371ebf2c

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -2535,25 +2535,25 @@ margin-top: 20px"/>
     </div>
 </div>
 <!--HKA 24.12.2013 Modal before Deleting Contact-->
-<div id="BeforedeleteContact" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div id="BeforedeleteLead" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">{{ _('Delete Contact') }}</h3>
+                <h3 id="myModalLabel" class="modal-title">{{ _('Delete Lead') }}</h3>
             </div>
             <div class="modal-body">
                 <form id="seletesho" name="deletesho" class="form-horizontal">
 
 
-                    <p>{{ _("Are you sure you want to delete") }} : <%=contact.firstname%> <%=contact.lastname%> .</p>
+                    <p>{{ _("Are you sure you want to delete") }} : <%=lead.firstname%> <%=lead.lastname%> .</p>
 
             </div>
             <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _("Cancel") }}</button>
 
-                <input ng-click="deletecontact()" type="submit" class="btn red" value="Delete this Contact">
+                <input ng-click="deletelead()" type="submit" class="btn red" value="Delete this Lead">
                 <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
             </div>
             </form>
