fixe html5 text editor in leads list view
Former-commit-id: 08bb94bd5a4072367390ee75b765996f857175eb [formerly cd8a6283a9b4a92fdff14d7820eed7223bbc3db5] [formerly 0baa8de7b8acba2a16514f8693b7165b475140c8 [formerly 493f9aca8d5bedb5ca6f363068d097de57679fdf]]
Former-commit-id: 517432504629eab649ef7bf36f5ef6e4234ce1aa [formerly 799286a9de5589879b0bcde2d1117834b3061843]
Former-commit-id: 41fdeada7178a7c5dac980c3f1ec5655ef0f9bfb

--- a/templates/base.html
+++ b/templates/base.html
@@ -416,11 +416,10 @@ mixpanel.init("793d188e5019dfa586692fc3b312e5d1");</script><!-- end Mixpanel -->
 <!-- async scripts-->
 <script type="text/javascript">
 
-    var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
-    //var ROOT = 'http://localhost:8090/_ah/api';
+    //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+    var ROOT = 'http://localhost:8090/_ah/api';
     var apisToLoad;
     var callback = function () {
-
         console.log('callback');
         if (--apisToLoad == 0) {
             signin(true, userAuthed);
