--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -484,7 +484,7 @@
                               </div>
                               <div class="news-block-tags">
                                 <div class="form-group row">
-                                  <label class="control-label col-md-4"><i class="fa fa-clock-o "></i> {{ _(' Time scale')}}</label>
+                                  <label class="control-label col-md-4"><i class="fa fa-clock-o "></i> {{ _(' Decision process Timeline')}}</label>
                                    <div class="col-md-8">
                                     <a href="" ng-click="showAddEventPopup()" style="cursor:pointer">
                                         + <i class="fa fa-calendar" style="font-size:13px"></i> Add an event</a>
@@ -496,7 +496,7 @@
                                            <div class="event-container">
                                                <div class="showDescription">
                                           <span class="relatedEventTitle">
-                                            <a href="/#/events/show/<%=event.id%>" class="">
+                                            <a  class="">
                                                 <%= event.title%>
                                             </a>
                                           </span>
@@ -1296,29 +1296,41 @@
                         </div>
                   </div>                     
                   <div class="row">
-                    <div class="col-md-12"> 
-                    <div class="dropdown">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true" style="  border: none !important;color: rgba(0, 0, 0, 0.44);"> 
+                        <div class="col-md-12">
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
+                                        data-toggle="dropdown" aria-expanded="true"
+                                        style="  border: none !important;color: rgba(0, 0, 0, 0.44);">
 
-                            <i class="glyphicon glyphicon-bell" style="color: rgba(0, 26, 131, 0.61); margin-left: -4px;"></i>  
-                            <span>Remind me</span>  
-                            <span class="caret"></span>
+                                    <i class="glyphicon glyphicon-bell"
+                                       style="color: rgba(0, 26, 131, 0.61); margin-left: -4px;"></i>
+                                    <span>Remind me</span>
+                                    <span class="caret"></span>
 
-                        </button> 
-                        <span ng-show="something_picked" style="border: 1px solid rgba(10, 18, 168, 0.258824);padding: 3px; color: rgb(108, 108, 108);border-radius: 3px !important;background-color: rgba(154, 157, 205, 0.258824);"> <%=remindme_show %><a href="" ng-click="deletePicked()" class=" calendar-close-invite"  style=" top: 2px !important;"></a></span> 
+                                </button>
+                                <span ng-show="something_picked"
+                                      style="border: 1px solid rgba(10, 18, 168, 0.258824);padding: 3px; color: rgb(108, 108, 108);border-radius: 3px !important;background-color: rgba(154, 157, 205, 0.258824);"> <%=remindme_show %><a
+                                        href="" ng-click="deletePicked()" class=" calendar-close-invite"
+                                        style=" top: 2px !important;"></a></span>
 
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(0)">No notification</a></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(1)"> At time of event</a></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(2)">30 minutes before</a></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(3)">1 hour </a></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(4)">1 day </a></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(5)">1 week </a></li>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(0)">No
+                                        notification</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(1)"> At
+                                        time of event</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(2)">30
+                                        minutes before</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(3)">1
+                                        hour </a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(4)">1
+                                        day </a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(5)">1
+                                        week </a></li>
 
-                        </ul>
-                      </div>
-                  </div> 
-                  </div>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     
                 </form>
             </div>
