--- a/templates/base.html
+++ b/templates/base.html
@@ -433,7 +433,7 @@ mixpanel.init("793d188e5019dfa586692fc3b312e5d1");</script><!-- end Mixpanel -->
      var ROOT = getRoot();
 
 
-  var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
  //   var ROOT = '/_ah/api';
 
     var apisToLoad;
@@ -486,10 +486,15 @@ mixpanel.init("793d188e5019dfa586692fc3b312e5d1");</script><!-- end Mixpanel -->
         read: function (key) {
             var data = {};
             if (typeof(Storage) != "undefined") {
-                data = JSON.parse(localStorage.getItem(key));
-                if (data == null) {
+                if(localStorage.getItem(key)===""){
                     data = {};
+                }else{
+                    data = JSON.parse(localStorage.getItem(key));
+                    if (data == null) {
+                        data = {};
+                    }
                 }
+                
             }
             return data;
         },
