fixing customfields on opportunity on all objects
Former-commit-id: 7bcbf63bdb77c0d72e26137bdb88be053ee8cba5 [formerly f6727bf7463c999d245ac08c5e318818de95c912] [formerly 0797554829e6e714f04ebc1b0120e01cc89da8f3 [formerly 562548139bc1d66f2743a2b2d760a2ac7512f584]]
Former-commit-id: d17fbb4cbbe3e51157431bb81192d15a1bc42659 [formerly 3e2ea47022e44a0ae5bce7ead6aeb2da4f3b7f8f]
Former-commit-id: 1d4bf04b25f200ee5a3037eddaffda307fd43303

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -53,7 +53,7 @@
                 <a class="" href="#sharingSettingsModal" data-toggle="modal" title="Share" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-show="selectedTab==2"> 
                       <i class="fa fa-share-square-o" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>
-                <a class="headerBtn" title="Delete"  ng-hide=" selectedCards.length==0" ng-click="editbeforedelete(account, 'account')"> 
+                <a class="headerBtn" title="Delete"  ng-show="selectedTab==2" ng-click="editbeforedelete(account, 'account')"> 
                       <i class="fa fa-trash-o"></i>
                 </a>
                  <a class="headerBtn" title="Delete" ng-show="selectedTab==5&&selectedOpps.length > 0" ng-click="editbeforedeleteopp()">
@@ -4330,7 +4330,36 @@
                             </div>
                         </div>
                     </div>
-                   
+                   <div id="BeforedeleteOpportunity" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel" class="modal-title"><i class="fa fa-trash-o" style="font-size: 25px;"></i>  Delete Opportunity</h3>
+            </div>
+            <div class="modal-body">
+                <form id="seletesho" name="deletesho" class="form-horizontal">
+                    <fieldset>
+
+                        <p style="font-size: 16px;text-align: center;" ng-show="selectedOpps.length > 1">{{ _("Are you sure you want to delete") }} : <span style="color:blue"> <%=selectedOpps.length %> </span>  {{ _("opportunities") }} ?</p>
+                        <p style="font-size: 16px;text-align: center;" ng-show="selectedOpps.length == 1">{{ _("Are you sure you want to delete") }} : <span style="color:blue"> <%=selectedOpps[0].name %> </span> ?</p>
+
+
+                    </fieldset>
+                </form>
+
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _("Cancel") }}</button>
+
+                <input ng-click="deleteopportunity()" type="submit" class="btn red" value="Delete">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
+            </div>
+
+        </div>
+    </div>
+</div>
                     <!--Event Modal -->
                     <div id="newEventModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
