--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -1450,43 +1450,44 @@
                                                         
                                                            
                                                 </div>
-                                                 <div class="news-blocks blank-card blank-card-gray relatedBlock" ng-class="{'disabledBlock':isEmptyArray(opportunities.customfields)}" >
+                                                 <div class="news-blocks blank-card blank-card-gray relatedBlock" ng-class="{'disabledBlock':isEmptyArray(opp.customfields)}" >
                                                                   <h3 style="margin-top:0px;"><i class="fa fa fa-list-alt" style="font-size:24px"></i>{{ _(' Custom Fields') }}</h3>
-                                                                      <div ng-show="isEmptyArray(opportunities.customfields)" style="text-align:center">
+                                                                      <div ng-show="isEmptyArray(opp.customfields)" style="text-align:center">
                                                                                 <a href="/#/admin/custom_fields/1" class=" newRelatedContact" style="font-size: 13px;color: rgb(209, 38, 16);font-weight: bold;cursor:pointer;">
                                                                                   + <i class="fa fa-list-alt"></i>  Add Custom fields
                                                                                 </a> 
                                                                       </div>
-                                                                      <ul ng-show="!isEmptyArray(opportunities.customfields)" style="list-style: none;padding-left: 0px;">
-                                                                          <li ng-repeat="cusfield in opportunities.customfields"  style="padding: 5px;">
-                                                                              <div class="form-group" style="margin-bottom: 5px;">
-                                                                                  <div class="row">
-                                                                                      <label ng-model="cusfield.field" class="control-label col-md-12">
-                                                                                          <%=cusfield.name%>
-                                                                                      </label>
-                                                                                  </div>
-                                                                                  <div class="row">
-                                                                                      <div class="col-md-12" id="elementContainer" >
-                                                                                          <select class="form-control" ng-show="cusfield.field_type=='list'" ng-change="addCustomFieldForOpp(cusfield)"  ng-model="cusfield.value" ng-options="option for option in cusfield.options">
-                                                                                          </select>
-                                                                                          <div ng-show="cusfield.field_type=='radio'" role="radiogroup" ng-repeat="option in cusfield.options">
-                                                                                              <input id="<%=cusfield.id%>_<%=option%>_<%=$index%>" type="radio" ng-model="cusfield.value" value="<%=option%>"  ng-click="addCustomFieldForOpp(cusfield)">
-                                                                                              <label for="<%=cusfield.id%>_<%=option%>_<%=$index%>" ng-click="addCustomFieldForOpp(cusfield)"> <%=option%></label>
-                                                                                              <br>        
-                                                                                          </div>
-                                                                                          <div ng-show="cusfield.field_type=='checkbox'" role="radiogroup" ng-repeat="option in cusfield.options">
-                                                                                              <input type="checkbox" value="<%=option%>" ng-click="addCustomFieldForOpp(cusfield,option)"  ng-checked="cusfield.value.indexOf(option) > -1">
-                                                                                              <label for="<%=option%>"> <%=option%></label ng-click="addCustomFieldForOpp(cusfield,option)">
-                                                                                              <br>        
-                                                                                          </div>
-                                                                                          <input ng-blur="addCustomFieldForOpp(cusfield)" ng-model="cusfield.value" type="text" class="form-control" ng-show="cusfield.field_type=='text'">
-                                                                                          <textarea ng-model="cusfield.value" ng-blur="addCustomFieldForOpp(cusfield)" class="form-control" ng-show="cusfield.field_type=='paragraph'"></textarea>
 
-                                                                                      </div>
+                     <ul ng-show="!isEmptyArray(opp.customfields)" style="list-style: none;padding-left: 0px;">
+                        <li ng-repeat="cusfield in opp.customfields"  style="padding: 5px;">
+                            <div class="form-group" style="margin-bottom: 5px;">
+                                <div class="row">
+                                    <label ng-model="cusfield.field" class="control-label col-md-12">
+                                        <%=cusfield.name%>
+                                    </label>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12" id="elementContainer" >
+                                        <select class="form-control" ng-show="cusfield.field_type=='list'" ng-change="addCustomFieldForOpp(cusfield)"  ng-model="cusfield.value" ng-options="option for option in cusfield.options">
+                                        </select>
+                                        <div ng-show="cusfield.field_type=='radio'" role="radiogroup" ng-repeat="option in cusfield.options">
+                                            <input id="<%=cusfield.id%>_<%=option%>_<%=$index%>" type="radio" ng-model="cusfield.value" value="<%=option%>"  ng-click="addCustomFieldForOpp(cusfield)">
+                                            <label for="<%=cusfield.id%>_<%=option%>_<%=$index%>" ng-click="addCustomFieldForOpp(cusfield)"> <%=option%></label>
+                                            <br>        
+                                        </div>
+                                        <div ng-show="cusfield.field_type=='checkbox'" role="radiogroup" ng-repeat="option in cusfield.options">
+                                            <input type="checkbox" value="<%=option%>" ng-click="addCustomFieldForOpp(cusfield,option)"  ng-checked="cusfield.value.indexOf(option) > -1">
+                                            <label for="<%=option%>"> <%=option%></label ng-click="addCustomFieldForOpp(cusfield,option)">
+                                            <br>        
+                                        </div>
+                                        <input ng-blur="addCustomFieldForOpp(cusfield)" ng-model="cusfield.value" type="text" class="form-control" ng-show="cusfield.field_type=='text'">
+                                     <textarea ng-model="cusfield.value" ng-blur="addCustomFieldForOpp(cusfield)" class="form-control" ng-show="cusfield.field_type=='paragraph'"></textarea>
 
-                                                                                  </div>
-                                                                              </div>
-                                                                          </li>
+                                  </div>
+
+                               </div>
+                        </div>
+                      </li>
                                                                       </ul>
                                                                   <div class="clearfix"></div>
                                                               </div>
@@ -4117,10 +4118,7 @@
 function waitwizard() {
       if (jQuery.isEmptyObject(angular.element("#signin").scope().insideStages)) {
           setTimeout("waitwizard()", 500);
-          console.log("not yet");
       }else{
-                console.log("yes it works");
-                console.log(angular.element("#signin").scope().insideStages);
                  wizz()// you will need an asynch callback
     }
 
