finishing related opp on all objects
Former-commit-id: 7bf9ee7e1164cbfd3e7d7e852b7400a4e0935011 [formerly 8defb1dd2d9e90290178ad5c70a9db00f33ee4b1] [formerly 3e9648ae2fb6487db8dcf3b4e4fd282bb6bc17eb [formerly 92db41b5420f3bbec3e2acd45b8b8400c3132c53]]
Former-commit-id: 858e2b1b28d4cdd79dee01b0a8eb56d1395c6d8c [formerly 545de70fa5944b600e854bbb3f7ee3bcc7c658a2]
Former-commit-id: a87515264a09d0a1bd3a7ab6b7dfc5b1d4514e81

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1908,15 +1908,15 @@
                           
                              
                   </div>
-                   <div class="news-blocks blank-card blank-card-gray relatedBlock" ng-class="{'disabledBlock':isEmptyArray(opportunities.customfields)}" >
+                   <div class="news-blocks blank-card blank-card-gray relatedBlock" ng-class="{'disabledBlock':isEmptyArray(opp.customfields)}" >
                                     <h3 style="margin-top:0px;"><i class="fa fa fa-list-alt" style="font-size:24px"></i>{{ _(' Custom Fields') }}</h3>
-                                        <div ng-show="isEmptyArray(opportunities.customfields)" style="text-align:center">
-                                                  <a href="/#/admin/custom_fields/1" class=" newRelatedContact" style="font-size: 13px;color: rgb(209, 38, 16);font-weight: bold;cursor:pointer;">
+                                        <div ng-show="isEmptyArray(opp.customfields)" style="text-align:center">
+                                                  <a href="/#/admin/custom_fields/2" class=" newRelatedContact" style="font-size: 13px;color: rgb(209, 38, 16);font-weight: bold;cursor:pointer;">
                                                     + <i class="fa fa-list-alt"></i>  Add Custom fields
                                                   </a> 
                                         </div>
-                                        <ul ng-show="!isEmptyArray(opportunities.customfields)" style="list-style: none;padding-left: 0px;">
-                                            <li ng-repeat="cusfield in opportunities.customfields"  style="padding: 5px;">
+                                        <ul ng-show="!isEmptyArray(opp.customfields)" style="list-style: none;padding-left: 0px;">
+                                            <li ng-repeat="cusfield in opp.customfields"  style="padding: 5px;">
                                                 <div class="form-group" style="margin-bottom: 5px;">
                                                     <div class="row">
                                                         <label ng-model="cusfield.field" class="control-label col-md-12">
