--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -3224,31 +3224,36 @@
           </div>
 
 <div id="newDocument" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
+    <div class="modal-dialog">
+        <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-              <h3 id="myModalLabel" class="modal-title">{{_("Create a new")}} <%=mimeType%></h3>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel" class="modal-title">
+                  <img ng-src="/static/img/google_drive/<%=mimeType%>.png" class="" style="width: 27px;margin-top: -10px;">
+                  {{ _("Create a new") }} <%=mimeType%>
+                </h3>
             </div>
             <div class="modal-body">
-                     <div class="controls controls-row">
-                                          <form id="addTask"  class="ng-pristine ng-valid">
-                                                  <input class="form-control" autofocus type="text" placeholder="{{ _('Enter a new')}} <%=mimeType%> {{ _('name')}}" id="taskTitle" ng-model="newdocument.title" required>
+                <div class="controls controls-row">
+                    <form id="addTask" class="ng-pristine ng-valid">
+                        <input class="form-control" autofocus type="text" placeholder="<%=mimeType | capitalizeFirst %> name ..."
+                               id="taskTitle" ng-model="newdocument.title" required>
 
 
-                     </div>
+                </div>
             </div>
             <div class="modal-footer">
-              <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _('Cancel')}}</button>
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _('Cancel') }}</button>
 
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Create this document" ng-click="createDocument(newdocument)">
+                <input ng-hide="isLoading" type="submit" class="btn green" value="Create this document"
+                       ng-click="createDocument(newdocument)">
                 <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
 
-            </form>
+                </form>
             </div>
-            </div>
-            </div>
-          </div>
+        </div>
+    </div>
+</div>
     <!--End Contact Modal -->
 
      <!--HKA 19.11.2013 Opportunity Modal -->
