Switching from custom to default logo issues
Former-commit-id: 29727795df29d7fc2ed1a89f4e5cbccdd1d338b1 [formerly 9210c3315358f2165009c4fb09f8f5e09b58b78d] [formerly 3c8f7e96d39e4a1693dd308e4d078bbbe76646bf [formerly fd2e17b42959972e4c48d84640eb82d415e3fb46]]
Former-commit-id: e2d943966f37c1e2eca5023417558292c87c1663 [formerly 2f684eda26509899e872a8e13749b44b04f02ddd]
Former-commit-id: c0cbab2e48d3217b9d26ff2534b0943659b5536c

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,21 +57,18 @@ mixpanel.init("793d188e5019dfa586692fc3b312e5d1");</script><!-- end Mixpanel -->
              style="display:inline-block;float:left">
             <a class="navbar-brand" href="/apps/{{ sales_app.key.id() }}">
 
-                {% if logo != None %}
+                {% if logo != None and logo.fileUrl != None %}
                 <img src="{{ logo.fileUrl }}" alt="logo" class="img-responsive"
                          style="height:auto; width:auto; max-width:100px; max-height:32px;"/>
                 {% else %}
                     <img src="/static/build/img/iogrow-logo-app.png" alt="logo" class="img-responsive"/>
-
                 {% endif %}
-                
             </a>
 
             {% if user.is_admin and logo == None %}
                 <span id="update_logo_pan" class="update-Logo" ng-click="createPickerUploader()" style="display:none;">
-                                    <img src="/static/img/upload_logo.png"
-                                         style="margin-left: -2px;padding: 2px;width: 24px;"> {{ _('UpLoad your Logo') }}
-          </span>
+                      <img src="/static/img/upload_logo.png" style="margin-left: -2px;padding: 2px;width: 24px;"> {{ _('UpLoad your Logo') }}
+                </span>
             {% endif %}
         </div>
 
