--- a/templates/admin/company/company_edit.html
+++ b/templates/admin/company/company_edit.html
@@ -111,24 +111,23 @@
                     <div class="form-group">
                         <div class="radio-list">
                             <label>
-                                <input type="radio" value="default" ng-model="logo.type"
-                                       ng-click="deleteCustomLogo()">
+                                <input type="radio" value="default" ng-model="logo.type" ng-click="switchLogo()">
                                 {{ _('Default Logo') }}
                             </label>
                             <img src="/static/build/img/iogrow-logo-app.png" alt="logo"
-                                 style="border:solid #E2E2D7 1px;    margin-left: 75px;margin-bottom: 15px;"/>
+                                 style="border:solid #E2E2D7 1px;margin-left: 75px;margin-bottom: 15px;"/>
                             <label>
                                 <input type="radio" value="custom" ng-model="logo.type"
-                                       ng-click="createPickerUploader()">
+                                       ng-click="switchLogo()">
                                 {{ _('Custom Logo') }}
                             </label>
 
                             <div ng-click="logo.type='custom'; createPickerUploader();">
 
-                                <img ng-src="<%= fileUrl %>" alt="logo" height="34px"
-                                     style="border:solid #E2E2D7 1px;margin-left: 75px;" ng-show="fileUrl"/>
+                                <img ng-src="<%= customLogo %>" alt="logo" height="34px"
+                                     style="border:solid #E2E2D7 1px;margin-left: 75px;" ng-show="customLogo"/>
                                     <span style="border:solid #E2E2D7 1px;margin-left: 75px;padding: 7px;"
-                                          ng-hide="fileUrl">
+                                          ng-hide="customLogo">
                                         {{ _('Your logo here') }} ... </span>
                             </div>
                         </div>
