account list is fixed
Former-commit-id: 2e22b48eebfe8eca1a231868202cf40dd9e718be [formerly 53701f074c500ca872924873e60186ac77ab12f4] [formerly 05af928ea6c72e3a1e190aa4c5dd3759fe6b33b6 [formerly c670de0d93a8e98687a25efe07e8f679d71cb313]]
Former-commit-id: 03e11783e01061553b464b53cc97fb4624312abe [formerly 883b786675c7e2d1660bd17416b97c135c4f8f35]
Former-commit-id: 292dd7a85fff0972b9f95ef52b1421de628afc3f

--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -684,7 +684,7 @@
          </div>-->
                 <div class="col-md-12">
                     <!-- BEGIN PORTLET -->
-                    <div id="linkedinSearch" class="portlet showPage rightCardContent"
+                    <div id="linkedinSearch" ng-show="inList.length > 0||inIsSearching" class="portlet showPage rightCardContent"
                          >
                         <div class="portlet-title line">
                             <div class="caption"><i class="fa fa-linkedin" style='color:#169ef4'></i>
@@ -709,8 +709,7 @@
                                     <strong style="font-size: 14px;color: gray;"><i class="fa fa-male"></i> {{_('We
                                         found diffrent possible matches. Click the one you want :')}}</strong>
                                 </div>
-
-                                <ul ng-show="inList.length > 4&&isEmptyArray(inShortProfiles)"
+                                <ul ng-show="inList.length > &&isEmptyArray(inShortProfiles)"
                                     class="list-unstyled contact-infos slim-linkedin" style="padding-left:0px">
                                     <li ng-mouseover="showSelectButton($index)" ng-mouseleave="hideSelectButton($index)"
                                         title="Select" class="linkedin-item-on-list" ng-repeat="profile in inList"
