--- a/templates/base.html
+++ b/templates/base.html
@@ -412,7 +412,6 @@ mixpanel.init("793d188e5019dfa586692fc3b312e5d1");</script><!-- end Mixpanel -->
 <script src="/static/build/js/first_sync_scripts.js" type="text/javascript"></script>
 <!-- async scripts-->
 <script type="text/javascript">
-<<<<<<< HEAD
     // function getRoot() {
     //  var origin = window.location.origin;
     //  var url = '';
@@ -426,29 +425,8 @@ mixpanel.init("793d188e5019dfa586692fc3b312e5d1");</script><!-- end Mixpanel -->
     //  }
     //  var ROOT = getRoot();
 
- var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
-       //  var ROOT = '/_ah/api';
-=======
-
-
-    function getRoot() {
-     var origin = window.location.origin;
-     var url = '';
-     if (origin.indexOf('localhost') != -1 || origin.indexOf('127.0.0') != -1) {
-     url = origin;
-     } else if (origin.indexOf('.com') != -1) {
-     url = "https://gcdc2013-iogrow.appspot.com";
-     }
-     console.log(url);
-     return url + '/_ah/api';
-     }
-     var ROOT = getRoot();
-
- //     var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
-//var ROOT = '/_ah/api';
-
->>>>>>> ec52b00a7b3244a56f957a4bdd3f5aa99e8b4a50
-
+ // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+  var ROOT = '/_ah/api';
     var apisToLoad;
     var callback = function () {
         console.log('callback');
